--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@vercel/edge-config": "^0.4.1",
     "framer-motion": "^10.16.4",
     "googleapis": "^128.0.0",
     "next": "14.0.1",
